energy price testing / dev

--- a/Generation Pricing/ML pricing.ipynb
+++ b/Generation Pricing/ML pricing.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b073bfe",
+   "execution_count": 1,
+   "id": "d56b9073",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-29 15:22:13.651400: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/software/quadis/latest/quadis/build/lib:/opt/conda/lib\n",
-      "2024-01-29 15:22:13.651441: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2024-01-29 15:22:15.948843: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/software/quadis/latest/quadis/build/lib:/opt/conda/lib\n",
-      "2024-01-29 15:22:15.948890: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2024-01-29 15:22:15.948932: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:163] no NVIDIA GPU device is present: /dev/nvidia0 does not exist\n",
-      "2024-01-29 15:22:15.969204: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2024-01-30 13:17:47.460808: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/software/quadis/latest/quadis/build/lib:/opt/conda/lib\n",
+      "2024-01-30 13:17:47.460847: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2024-01-30 13:17:49.906380: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/software/quadis/latest/quadis/build/lib:/opt/conda/lib\n",
+      "2024-01-30 13:17:49.906457: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2024-01-30 13:17:49.930416: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:163] no NVIDIA GPU device is present: /dev/nvidia0 does not exist\n",
+      "2024-01-30 13:17:49.946740: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -24,37 +24,50 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1753/1753 [==============================] - 6s 2ms/step - loss: 0.5421 - val_loss: 0.6531\n",
+      "1753/1753 [==============================] - 58s 30ms/step - loss: 0.6134 - val_loss: 0.7801\n",
       "Epoch 2/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.5035 - val_loss: 0.6744\n",
+      "1753/1753 [==============================] - 51s 29ms/step - loss: 0.5600 - val_loss: 0.6739\n",
       "Epoch 3/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.5018 - val_loss: 0.6355\n",
+      "1753/1753 [==============================] - 50s 28ms/step - loss: 0.5261 - val_loss: 0.6422\n",
       "Epoch 4/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.4944 - val_loss: 0.6408\n",
+      "1753/1753 [==============================] - 49s 28ms/step - loss: 0.5211 - val_loss: 0.6488\n",
       "Epoch 5/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.4876 - val_loss: 0.6389\n",
+      "1753/1753 [==============================] - 50s 28ms/step - loss: 0.5103 - val_loss: 0.6424\n",
       "Epoch 6/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.4874 - val_loss: 0.6488\n",
+      "1753/1753 [==============================] - 52s 29ms/step - loss: 0.5100 - val_loss: 0.6367\n",
       "Epoch 7/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.4788 - val_loss: 0.6529\n",
+      "1753/1753 [==============================] - 50s 29ms/step - loss: 0.5105 - val_loss: 0.6395\n",
       "Epoch 8/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.4751 - val_loss: 0.6442\n",
+      "1753/1753 [==============================] - 50s 29ms/step - loss: 0.5049 - val_loss: 0.6724\n",
       "Epoch 9/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.4570 - val_loss: 0.6822\n",
+      "1753/1753 [==============================] - 48s 28ms/step - loss: 0.5037 - val_loss: 0.6421\n",
       "Epoch 10/10\n",
-      "1753/1753 [==============================] - 4s 2ms/step - loss: 0.4464 - val_loss: 0.6454\n"
+      "1753/1753 [==============================] - 51s 29ms/step - loss: 0.5025 - val_loss: 0.6275\n",
+      "Evaluation MSE: 0.25913912057876587\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.layers import Dense, LSTM\n",
     "from tensorflow.keras.optimizers import Adam\n",
+    "import numpy as np\n",
+    "\n",
+    "# Function to load and preprocess the data\n",
+    "def load_and_preprocess(file_path):\n",
+    "    data = pd.read_csv(file_path)\n",
+    "    data = data.iloc[2:]  # Skip the first two rows of header information\n",
+    "    data.columns = ['Date', 'Hour', 'HOEP', 'Hour 1 Predispatch', 'Hour 2 Predispatch', 'Hour 3 Predispatch', 'OR 10 Min Sync', 'OR 10 Min non-sync', 'OR 30 Min']\n",
+    "    data = data[['Date', 'Hour', 'HOEP']].reset_index(drop=True)\n",
+    "    data = data[data['Hour'].str.isnumeric()]  # Filter out non-numeric rows\n",
+    "    data['Hour'] = data['Hour'].astype(int) - 1  # Adjust hour to 0-23 format\n",
+    "    data['HOEP'] = pd.to_numeric(data['HOEP'], errors='coerce')\n",
+    "    data.dropna(subset=['HOEP'], inplace=True)\n",
+    "    return data\n",
     "\n",
     "# Define file paths for each dataset\n",
     "file_paths = {\n",
@@ -68,22 +81,6 @@
     "    '2022': './PUB_PriceHOEPPredispOR_2022_v396.csv',\n",
     "    '2023': './PUB_PriceHOEPPredispOR_2023_v393.csv'\n",
     "}\n",
-    "\n",
-    "# Function to load and preprocess the data\n",
-    "def load_and_preprocess(file_path):\n",
-    "    df = pd.read_csv(file_path, skiprows=2)\n",
-    "    # Set correct column names\n",
-    "    df.columns = ['Date', 'Hour', 'HOEP', 'Hour 1 Predispatch', 'Hour 2 Predispatch', 'Hour 3 Predispatch', 'OR 10 Min Sync', 'OR 10 Min non-sync', 'OR 30 Min']\n",
-    "    # Drop unnecessary columns\n",
-    "    df = df[['Date', 'Hour', 'HOEP']].reset_index(drop=True)\n",
-    "    # Remove rows with non-numeric 'Hour' values\n",
-    "    df = df[df['Hour'].apply(lambda x: str(x).isnumeric())]\n",
-    "    # Convert 'Hour' to integer and 'HOEP' to numeric\n",
-    "    df['Hour'] = df['Hour'].astype(int) - 1  # Adjusting for 0-23 hour format\n",
-    "    df['HOEP'] = pd.to_numeric(df['HOEP'], errors='coerce')\n",
-    "    # Drop rows with NaN values in 'HOEP'\n",
-    "    df.dropna(subset=['HOEP'], inplace=True)\n",
-    "    return df\n",
     "\n",
     "# Load and concatenate the training datasets\n",
     "df_list = [load_and_preprocess(file_paths[year]) for year in file_paths if year != '2023']\n",
@@ -116,9 +113,15 @@
     "data_train_lagged = create_lagged_features(data_train, n_lags=24)\n",
     "\n",
     "# Normalize the data\n",
-    "scaler = StandardScaler()\n",
-    "scaled_features = scaler.fit_transform(data_train_lagged.drop('HOEP', axis=1))\n",
-    "scaled_labels = scaler.fit_transform(data_train_lagged['HOEP'].values.reshape(-1, 1))\n",
+    "scaler_features = StandardScaler()\n",
+    "scaler_labels = StandardScaler()\n",
+    "\n",
+    "# Fit the scaler on the features and transform them\n",
+    "scaled_features = scaler_features.fit_transform(data_train_lagged.drop('HOEP', axis=1))\n",
+    "\n",
+    "# Fit the scaler on the labels and transform them\n",
+    "# Reshape the 'HOEP' values to be a 2D array for the scaler\n",
+    "scaled_labels = scaler_labels.fit_transform(data_train_lagged[['HOEP']])\n",
     "\n",
     "# Split the data into features and labels\n",
     "X_train = scaled_features\n",
@@ -127,10 +130,10 @@
     "# Split into training and validation sets\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Model Design: Using a simple feed-forward network as an example\n",
+    "# Model Design: Using LSTM for time series forecasting\n",
     "model = Sequential([\n",
-    "    Dense(100, activation='relu', input_dim=X_train.shape[1]),\n",
-    "    Dense(50, activation='relu'),\n",
+    "    LSTM(50, return_sequences=True, input_shape=(X_train.shape[1], 1)),\n",
+    "    LSTM(50),\n",
     "    Dense(1)\n",
     "])\n",
     "\n",
@@ -141,13 +144,15 @@
     "history = model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_val, y_val), verbose=1)\n",
     "\n",
     "# Preprocess the evaluation dataset\n",
-    "data_eval = pd.read_csv(file_paths['2023'], skiprows=2)\n",
+    "data_eval = load_and_preprocess(file_paths['2023'])\n",
     "data_eval['HOEP'].fillna(method='ffill', inplace=True)\n",
     "data_eval_lagged = create_lagged_features(data_eval, n_lags=24)\n",
     "\n",
-    "# Normalize the evaluation data using the scaler fitted on the training data\n",
-    "scaled_features_eval = scaler.transform(data_eval_lagged.drop('HOEP', axis=1))\n",
-    "scaled_labels_eval = scaler.transform(data_eval_lagged['HOEP'].values.reshape(-1, 1))\n",
+    "# Normalize the evaluation data using the scalers fitted on the training data\n",
+    "# Transform the features\n",
+    "scaled_features_eval = scaler_features.transform(data_eval_lagged.drop('HOEP', axis=1))\n",
+    "# Transform the labels and ensure they are the correct shape\n",
+    "scaled_labels_eval = scaler_labels.transform(data_eval_lagged[['HOEP']])\n",
     "\n",
     "X_eval = scaled_features_eval\n",
     "y_eval = scaled_labels_eval.ravel()  # Flatten to 1D array\n",
@@ -155,13 +160,62 @@
     "# Evaluate the model\n",
     "evaluation = model.evaluate(X_eval, y_eval, verbose=0)\n",
     "\n",
-    "print(f'Evaluation MSE: {evaluation}')\n"
+    "print(f'Evaluation MSE: {evaluation}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4a1bb96c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Earnings for 2023 based on the model's predictions: $23825.56\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict the HOEP prices for 2023 using the trained model\n",
+    "predicted_prices_2023_scaled = model.predict(X_eval)\n",
+    "predicted_prices_2023 = scaler_labels.inverse_transform(predicted_prices_2023_scaled)\n",
+    "\n",
+    "# Strategy to charge or discharge the battery\n",
+    "battery_capacity = 4  # MWh\n",
+    "battery_state = battery_capacity  # Assuming the battery starts fully charged\n",
+    "charge_rate = 1  # MWh per hour, assuming 1 MWh/h charge and discharge rate\n",
+    "earnings = 0.0\n",
+    "\n",
+    "for i in range(len(predicted_prices_2023) - 1):\n",
+    "    current_hour_price = data_eval['HOEP'].iloc[i]\n",
+    "    next_hour_predicted_price = predicted_prices_2023[i + 1][0]\n",
+    "\n",
+    "    if battery_state < battery_capacity and current_hour_price < next_hour_predicted_price:\n",
+    "        # Charge the battery, since the price is expected to increase\n",
+    "        charge_amount = min(charge_rate, battery_capacity - battery_state)\n",
+    "        battery_state += charge_amount\n",
+    "        earnings -= charge_amount * current_hour_price\n",
+    "\n",
+    "    elif battery_state > 0 and current_hour_price > next_hour_predicted_price:\n",
+    "        # Discharge (sell energy), since the price is expected to decrease\n",
+    "        discharge_amount = min(charge_rate, battery_state)\n",
+    "        battery_state -= discharge_amount\n",
+    "        earnings += discharge_amount * current_hour_price\n",
+    "\n",
+    "# Consider the final discharge at the end of the period to sell any remaining energy\n",
+    "earnings += battery_state * data_eval['HOEP'].iloc[-1]\n",
+    "battery_state = 0\n",
+    "\n",
+    "# Output the earnings\n",
+    "print(f\"Earnings for 2023 based on the model's predictions: ${earnings:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ab2523",
+   "id": "ec2354e9",
    "metadata": {},
    "outputs": [],
    "source": []
