--- a/Rough work/Solar_Sensitivity_Analysis_WSLRP.ipynb
+++ b/Rough work/Solar_Sensitivity_Analysis_WSLRP.ipynb
@@ -275,6 +275,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## NOTE: This script does not include panel degradation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Consumption vs Generation"
    ]
   },
@@ -1397,7 +1404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
