added sens analysis to toolkit

--- a/Dynamic solar/solar_sensativity.ipynb
+++ b/Dynamic solar/solar_sensativity.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "# Calculate revenues for each buyback price and generation value over the project lifespan\n",
     "yearly_revenue = np.outer(generation_array, buyback_pricing)\n",
-    "upfront_cost = cost_mount*(system_capacity+costSol)+trans_cost\n",
+    "upfront_cost = system_capacity*(cost_mount+costSol)+trans_cost\n",
     "\n",
     "# Plotting\n",
     "plt.figure(figsize=(14, 8))\n",
