--- a/Rough work/BatteryIslanding.ipynb
+++ b/Rough work/BatteryIslanding.ipynb
@@ -40,6 +40,8 @@
     "print('Tesla Megapack provides 3.9 MWh of energy storage \\n')\n",
     "batCap = round(DesiredConsumption * runtime,2) # calculate the min battery capacity [kWh]\n",
     "\n",
+    "\n",
+    "# for 100% battery usage\n",
     "if percentBat == 100:\n",
     "    \n",
     "    batCapMWh = round(batCap/1000,2) # calculate the min battery capacity [MWh]\n",
